# PiHole-domain-aggregator

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml  rust.yml
src/: config.rs  main.rs  store.rs  thread.rs
src/aggregate/: data.rs  lists.rs  mod.rs  validation.rs
src/lib/: addlist.rs  config.rs  errors.rs  mod.rs  thread.rs
src/lib/aggregate/: data.rs  lists.rs  validation.rs
testdata/: parse.json
