[package]
name = "phda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
punycode = { version = "0.4.1"}
serde = {version = "^1.0", features = ["derive"]}
serde_yaml = "0.8.23"
num_cpus = "1.13.1"