[package]
name = "phda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
punycode = { version = "0.4.1"}
serde = {version = "1.0.143", features = ["derive"]}
serde_yaml = "0.9.4"
serde_json = "1.0.82"
num_cpus = "1.13.1"
anyhow = "1.0.61"
itertools = "0.10.3"

[dev-dependencies]
mockito = "0.31.0"
